# IMGPROCESSOR

./: .gitignore  Build.sh  CMakeLists.txt  compile_commands.json  perf.data
.cache/clangd/index/: main.cpp.F3D3917D7BF7EA5A.idx
include/: cudahelper.h  image_functions.h  mainwindow.h
src/: cudahelper.cu  image_functions.cpp  main.cpp  mainwindow.cpp
tests/: test-main.cpp
